Added styling and functionality for when the DB is empty and there are no books

--- a/client/src/app/books/catalog/catalog.component.scss
+++ b/client/src/app/books/catalog/catalog.component.scss
@@ -22,3 +22,13 @@
    font-size: 14px;
    font-style: oblique;
 }
+
+.title {
+   font-size: xx-large;
+}
+
+.home-mat-card {
+   margin: 75px;
+   display: flex;
+   align-items: center;
+}
