--- a/client/src/app/shared/navigation/navigation.component.html
+++ b/client/src/app/shared/navigation/navigation.component.html
@@ -22,9 +22,9 @@
          <mat-icon>exit_to_app</mat-icon>Logout</button>
       <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" color="accent"
          [routerLink]="['/profile']">
-         <mat-icon>color_lens</mat-icon>My Profile</button>
+         <mat-icon>whatshot</mat-icon>Hi, {{currentUser}}! (Profile)</button>
    </ng-container>
 
    <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/about']">
-      <mat-icon> bubble_chart</mat-icon>About the App</button>
+      <mat-icon>spa</mat-icon>About the App</button>
 </div>
