--- a/client/src/app/users/view-profile/view-profile.component.html
+++ b/client/src/app/users/view-profile/view-profile.component.html
@@ -6,7 +6,7 @@
       <mat-card-header>
          <mat-card-title-group>
             <mat-card-title>
-               <h2 class="title"><mat-icon>color_lens</mat-icon> Welcome to {{user.username}}'s profile!</h2>
+               <h2 class="title"><mat-icon>whatshot</mat-icon> Welcome to {{user.username}}'s profile!</h2>
             </mat-card-title>
             <mat-card-subtitle>
                <div class="sub-title">Name: {{user.firstName}} {{user.lastName}}</div>
