--- a/client/src/app/core/home/home.component.scss
+++ b/client/src/app/core/home/home.component.scss
@@ -8,3 +8,13 @@
    display: flex;
    align-items: center;
 }
+
+.title {
+   font-size: xx-large;
+}
+
+.home-mat-card {
+   margin: 75px;
+   display: flex;
+   align-items: center;
+}
