--- a/client/src/app/users/profile/profile.component.html
+++ b/client/src/app/users/profile/profile.component.html
@@ -7,7 +7,7 @@
          <mat-card-header>
             <mat-card-title-group>
                <mat-card-title>
-                  <h2 class="title"><mat-icon>color_lens</mat-icon> Welcome to your profile, {{currentUser}}!</h2>
+                  <h2 class="title"><mat-icon>whatshot</mat-icon> Welcome to your profile, {{currentUser}}!</h2>
                   <mat-slide-toggle class="sub-title" [(ngModel)]="showEditMode">Open Edit Mode</mat-slide-toggle>
                   <hr>
                </mat-card-title>
@@ -49,12 +49,12 @@
                <tr>
                   <td>
                      <p *ngFor="let bookOwned of user.booksOwned"><mat-icon
-                           style="vertical-align: middle; font-size: 16px;">play_for_work</mat-icon><a
+                           style="vertical-align: middle; font-size: 20px;">playlist_add</mat-icon><a
                            [routerLink]="['/catalog', bookOwned._id]">{{bookOwned.title}}</a></p>
                   </td>
                   <td>
                      <p *ngFor="let bookRequested of user.booksRequested"><mat-icon
-                           style="vertical-align: middle; font-size: 16px;">chevron_left</mat-icon><a
+                           style="vertical-align: middle; font-size: 20px;">playlist_add_check</mat-icon><a
                            [routerLink]="['/catalog', bookRequested._id]">{{bookRequested.title}}</a></p>
                   </td>
                </tr>
