--- a/client/src/app/comments/all-comments/all-comments.component.scss
+++ b/client/src/app/comments/all-comments/all-comments.component.scss
@@ -1,3 +1,10 @@
-.margin-top {
-   margin-top: 150px;
+.center-div {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin: 20px;
 }
+
+// .margin-top {
+//    margin-top: 150px;
+// }
